core/Grammar2Model.Gra2MoL/Gra2MoLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g 2010-12-05 12:58:50

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class Gra2MoLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DQVALUE", "ID", "QUOTE", "DOT", "DDOTS", "NUMBER", "TRIPLEBAR", "DOUBLEBAR", "BAR", "AND", "OR", "NOT", "AT", "AL", "PLUS", "IDESC", "DOUBLEQUOTE", "OPERATION", "WS", "ML_COMMENT", "OL_COMMENT", "'grammar'", "':'", "';'", "'metamodel'", "'hash'", "','", "'end_hash'", "'->'", "'default'", "'G'", "'('", "')'", "'MM'", "'end_rule'", "'rule'", "'skip_rule'", "'copy_rule'", "'mixin_rule'", "'from'", "'['", "'unique'", "']'", "'{'", "'}'", "'context'", "'to'", "'queries'", "'for'", "'each'", "'in'", "'greater'", "'first'", "'last'", "'all'", "'eq'", "'exists'", "'check'", "'hasResults'", "'startsWith'", "'endsWith'", "'mapping'", "'mappings'", "'do'", "'='", "'if'", "'then'", "'end_if'", "'skip'", "'else'", "'*'", "'new'", "'map'", "'extract'", "'extractID'", "'execute'", "'removeQuotes'", "'count'", "'convertHexToString'", "'ext'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__29=29;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__62=62;
    public static final int IDESC=19;
    public static final int T__26=26;
    public static final int T__63=63;
    public static final int T__25=25;
    public static final int NOT=15;
    public static final int AND=13;
    public static final int ID=5;
    public static final int T__61=61;
    public static final int DOUBLEQUOTE=20;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int AT=16;
    public static final int T__55=55;
    public static final int ML_COMMENT=23;
    public static final int T__56=56;
    public static final int QUOTE=6;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__59=59;
    public static final int DOUBLEBAR=11;
    public static final int PLUS=18;
    public static final int DOT=7;
    public static final int AL=17;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__80=80;
    public static final int T__46=46;
    public static final int T__81=81;
    public static final int T__47=47;
    public static final int T__82=82;
    public static final int T__44=44;
    public static final int T__83=83;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=9;
    public static final int OL_COMMENT=24;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=22;
    public static final int T__71=71;
    public static final int T__33=33;
    public static final int T__72=72;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int TRIPLEBAR=10;
    public static final int T__70=70;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int DDOTS=8;
    public static final int OR=14;
    public static final int DQVALUE=4;
    public static final int OPERATION=21;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int BAR=12;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;

    // delegates
    // delegators


        public Gra2MoLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Gra2MoLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("Gra2MoLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return Gra2MoLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g"; }


    public static class transformation_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "transformation"
    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:20:1: transformation returns [Node returnNode] : (TK_0= 'grammar' TK_1= ':' sourceGrammar= DQVALUE TK_2= ';' )? (TK_3= 'metamodel' TK_4= ':' targetMetamodel= DQVALUE TK_5= ';' )? (hDef+= hash )* (rDef+= rule )* ;
    public final Gra2MoLParser.transformation_return transformation() throws RecognitionException {
        Gra2MoLParser.transformation_return retval = new Gra2MoLParser.transformation_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        Token sourceGrammar=null;
        Token TK_2=null;
        Token TK_3=null;
        Token TK_4=null;
        Token targetMetamodel=null;
        Token TK_5=null;
        List list_hDef=null;
        List list_rDef=null;
        RuleReturnScope hDef = null;
        RuleReturnScope rDef = null;
        try {
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:21:1: ( (TK_0= 'grammar' TK_1= ':' sourceGrammar= DQVALUE TK_2= ';' )? (TK_3= 'metamodel' TK_4= ':' targetMetamodel= DQVALUE TK_5= ';' )? (hDef+= hash )* (rDef+= rule )* )
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:21:3: (TK_0= 'grammar' TK_1= ':' sourceGrammar= DQVALUE TK_2= ';' )? (TK_3= 'metamodel' TK_4= ':' targetMetamodel= DQVALUE TK_5= ';' )? (hDef+= hash )* (rDef+= rule )*
            {
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:21:3: (TK_0= 'grammar' TK_1= ':' sourceGrammar= DQVALUE TK_2= ';' )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==25) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:21:5: TK_0= 'grammar' TK_1= ':' sourceGrammar= DQVALUE TK_2= ';'
                    {
                    TK_0=(Token)match(input,25,FOLLOW_25_in_transformation49); 
                    TK_1=(Token)match(input,26,FOLLOW_26_in_transformation54); 
                    sourceGrammar=(Token)match(input,DQVALUE,FOLLOW_DQVALUE_in_transformation58); 
                    TK_2=(Token)match(input,27,FOLLOW_27_in_transformation63); 

                    }
                    break;

            }

            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:22:3: (TK_3= 'metamodel' TK_4= ':' targetMetamodel= DQVALUE TK_5= ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==28) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:22:5: TK_3= 'metamodel' TK_4= ':' targetMetamodel= DQVALUE TK_5= ';'
                    {
                    TK_3=(Token)match(input,28,FOLLOW_28_in_transformation74); 
                    TK_4=(Token)match(input,26,FOLLOW_26_in_transformation79); 
                    targetMetamodel=(Token)match(input,DQVALUE,FOLLOW_DQVALUE_in_transformation83); 
                    TK_5=(Token)match(input,27,FOLLOW_27_in_transformation88); 

                    }
                    break;

            }

            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:23:7: (hDef+= hash )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==29) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:23:7: hDef+= hash
            	    {
            	    pushFollow(FOLLOW_hash_in_transformation96);
            	    hDef=hash();

            	    state._fsp--;

            	    if (list_hDef==null) list_hDef=new ArrayList();
            	    list_hDef.add(hDef);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:23:19: (rDef+= rule )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=39 && LA4_0<=42)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:23:19: rDef+= rule
            	    {
            	    pushFollow(FOLLOW_rule_in_transformation101);
            	    rDef=rule();

            	    state._fsp--;

            	    if (list_rDef==null) list_rDef=new ArrayList();
            	    list_rDef.add(rDef);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            		// Create return CST Node
            		Node transformationReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		transformationReturnNode.setKind("transformation");
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_0!=null?TK_0.getText():null), TK_0.getCharPositionInLine(), TK_0.getLine());
            	 		transformationReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a Token CST Leaf	
            	    if(TK_1 != null) {
            			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_1!=null?TK_1.getText():null), TK_1.getCharPositionInLine(), TK_1.getLine());
            	 		transformationReturnNode.getChildren().add(TK_1Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(sourceGrammar != null) {
            			Leaf sourceGrammarLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("sourceGrammar", (sourceGrammar!=null?sourceGrammar.getText():null), sourceGrammar.getCharPositionInLine(), sourceGrammar.getLine());
            			transformationReturnNode.getChildren().add(sourceGrammarLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_2 != null) {
            			Leaf TK_2Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_2!=null?TK_2.getText():null), TK_2.getCharPositionInLine(), TK_2.getLine());
            	 		transformationReturnNode.getChildren().add(TK_2Leaf);
            	 	}
            	    // Create a Token CST Leaf	
            	    if(TK_3 != null) {
            			Leaf TK_3Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_3!=null?TK_3.getText():null), TK_3.getCharPositionInLine(), TK_3.getLine());
            	 		transformationReturnNode.getChildren().add(TK_3Leaf);
            	 	}
            	    // Create a Token CST Leaf	
            	    if(TK_4 != null) {
            			Leaf TK_4Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_4!=null?TK_4.getText():null), TK_4.getCharPositionInLine(), TK_4.getLine());
            	 		transformationReturnNode.getChildren().add(TK_4Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(targetMetamodel != null) {
            			Leaf targetMetamodelLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("targetMetamodel", (targetMetamodel!=null?targetMetamodel.getText():null), targetMetamodel.getCharPositionInLine(), targetMetamodel.getLine());
            			transformationReturnNode.getChildren().add(targetMetamodelLeaf);
            		}
            	    // Create a Token CST Leaf	
            	    if(TK_5 != null) {
            			Leaf TK_5Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_5!=null?TK_5.getText():null), TK_5.getCharPositionInLine(), TK_5.getLine());
            	 		transformationReturnNode.getChildren().add(TK_5Leaf);
            	 	}
            	    // Create a CST Node
            		if(list_hDef != null) {
            	        for(Iterator it = list_hDef.iterator(); it.hasNext(); )  { 
            	            Gra2MoLParser.hash_return r = (Gra2MoLParser.hash_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("hDef");
            	            	transformationReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            	    // Create a CST Node
            		if(list_rDef != null) {
            	        for(Iterator it = list_rDef.iterator(); it.hasNext(); )  { 
            	            Gra2MoLParser.rule_return r = (Gra2MoLParser.rule_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("rDef");
            	            	transformationReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = transformationReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "transformation"

    public static class hash_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "hash"
    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:93:1: hash returns [Node returnNode] : TK_0= 'hash' IDGen= ID hashValueGen+= hashValue (TK_1= ',' hashValueGen_1+= hashValue )* TK_2= 'end_hash' ;
    public final Gra2MoLParser.hash_return hash() throws RecognitionException {
        Gra2MoLParser.hash_return retval = new Gra2MoLParser.hash_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token IDGen=null;
        Token TK_1=null;
        Token TK_2=null;
        List list_hashValueGen=null;
        List list_hashValueGen_1=null;
        RuleReturnScope hashValueGen = null;
        RuleReturnScope hashValueGen_1 = null;
        try {
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:94:1: (TK_0= 'hash' IDGen= ID hashValueGen+= hashValue (TK_1= ',' hashValueGen_1+= hashValue )* TK_2= 'end_hash' )
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:94:5: TK_0= 'hash' IDGen= ID hashValueGen+= hashValue (TK_1= ',' hashValueGen_1+= hashValue )* TK_2= 'end_hash'
            {
            TK_0=(Token)match(input,29,FOLLOW_29_in_hash127); 
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_hash132); 
            pushFollow(FOLLOW_hashValue_in_hash137);
            hashValueGen=hashValue();

            state._fsp--;

            if (list_hashValueGen==null) list_hashValueGen=new ArrayList();
            list_hashValueGen.add(hashValueGen);

            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:94:52: (TK_1= ',' hashValueGen_1+= hashValue )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==30) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:94:54: TK_1= ',' hashValueGen_1+= hashValue
            	    {
            	    TK_1=(Token)match(input,30,FOLLOW_30_in_hash143); 
            	    pushFollow(FOLLOW_hashValue_in_hash148);
            	    hashValueGen_1=hashValue();

            	    state._fsp--;

            	    if (list_hashValueGen_1==null) list_hashValueGen_1=new ArrayList();
            	    list_hashValueGen_1.add(hashValueGen_1);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            TK_2=(Token)match(input,31,FOLLOW_31_in_hash155); 

            		// Create return CST Node
            		Node hashReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
            		hashReturnNode.setKind("hash");
            	    // Create a Token CST Leaf	
            	    if(TK_0 != null) {
            			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_0!=null?TK_0.getText():null), TK_0.getCharPositionInLine(), TK_0.getLine());
            	 		hashReturnNode.getChildren().add(TK_0Leaf);
            	 	}
            	    // Create a CST Leaf
            		if(IDGen != null) {
            			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen!=null?IDGen.getText():null), IDGen.getCharPositionInLine(), IDGen.getLine());
            			hashReturnNode.getChildren().add(IDGenLeaf);
            		}
            	    // Create a CST Node
            		if(list_hashValueGen != null) {
            	        for(Iterator it = list_hashValueGen.iterator(); it.hasNext(); )  { 
            	            Gra2MoLParser.hashValue_return r = (Gra2MoLParser.hashValue_return) it.next(); 
            	            if(r != null && r.returnNode != null) {
            	            	r.returnNode.setKind("hashValue");
            	            	hashReturnNode.getChildren().add(r.returnNode);
            	            } 
            	        }
            	    }

            		// Create a special CST Node for terminal hashValueGen_1 aggregation
            		if(list_hashValueGen_1 != null) {
            	    for(int pos = 0; pos < list_hashValueGen_1.size(); pos++ )  { 
            	    // Create a Token CST Leaf	
            	    if(TK_1 != null) {
            			Leaf TK_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_1!=null?TK_1.getText():null), TK_1.getCharPositionInLine(), TK_1.getLine());
            	 		hashReturnNode.getChildren().add(TK_1Leaf);
            	 	}
            		// No Terminal extractor
            	    if(list_hashValueGen_1 != null) {		
            	    	Gra2MoLParser.hashValue_return r = (Gra2MoLParser.hashValue_return) list_hashValueGen_1.get(pos); 
            	    	if(r != null && r.returnNode != null) {
            	        	r.returnNode.setKind("hashValue");
            	    		hashReturnNode.getChildren().add(r.returnNode);
            	    	} 
            		}
            		}
            		}

            	    // Create a Token CST Leaf	
            	    if(TK_2 != null) {
            			Leaf TK_2Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_2!=null?TK_2.getText():null), TK_2.getCharPositionInLine(), TK_2.getLine());
            	 		hashReturnNode.getChildren().add(TK_2Leaf);
            	 	}
            		// Returns the Node with CST Leaves/Nodes
            		retval.returnNode = hashReturnNode;
            	

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "hash"

    public static class hashValue_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "hashValue"
    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:149:1: hashValue returns [Node returnNode] : (hashValuePartGen+= hashValuePart TK_0= '->' hashValuePartGen_1+= hashValuePart | TK_0= 'default' TK_1= '->' hashValuePartGen+= hashValuePart );
    public final Gra2MoLParser.hashValue_return hashValue() throws RecognitionException {
        Gra2MoLParser.hashValue_return retval = new Gra2MoLParser.hashValue_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token TK_1=null;
        List list_hashValuePartGen=null;
        List list_hashValuePartGen_1=null;
        RuleReturnScope hashValuePartGen = null;
        RuleReturnScope hashValuePartGen_1 = null;
        try {
            // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:150:1: (hashValuePartGen+= hashValuePart TK_0= '->' hashValuePartGen_1+= hashValuePart | TK_0= 'default' TK_1= '->' hashValuePartGen+= hashValuePart )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==DQVALUE||LA6_0==34||LA6_0==37) ) {
                alt6=1;
            }
            else if ( (LA6_0==33) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:150:4: hashValuePartGen+= hashValuePart TK_0= '->' hashValuePartGen_1+= hashValuePart
                    {
                    pushFollow(FOLLOW_hashValuePart_in_hashValue178);
                    hashValuePartGen=hashValuePart();

                    state._fsp--;

                    if (list_hashValuePartGen==null) list_hashValuePartGen=new ArrayList();
                    list_hashValuePartGen.add(hashValuePartGen);

                    TK_0=(Token)match(input,32,FOLLOW_32_in_hashValue183); 
                    pushFollow(FOLLOW_hashValuePart_in_hashValue188);
                    hashValuePartGen_1=hashValuePart();

                    state._fsp--;

                    if (list_hashValuePartGen_1==null) list_hashValuePartGen_1=new ArrayList();
                    list_hashValuePartGen_1.add(hashValuePartGen_1);


                    		// Create return CST Node
                    		Node hashValueReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                    		hashValueReturnNode.setKind("hashValue");
                    	    // Create a CST Node
                    		if(list_hashValuePartGen != null) {
                    	        for(Iterator it = list_hashValuePartGen.iterator(); it.hasNext(); )  { 
                    	            Gra2MoLParser.hashValuePart_return r = (Gra2MoLParser.hashValuePart_return) it.next(); 
                    	            if(r != null && r.returnNode != null) {
                    	            	r.returnNode.setKind("hashValuePart");
                    	            	hashValueReturnNode.getChildren().add(r.returnNode);
                    	            } 
                    	        }
                    	    }
                    	    // Create a Token CST Leaf	
                    	    if(TK_0 != null) {
                    			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("TOKEN", (TK_0!=null?TK_0.getText():null), TK_0.getCharPositionInLine(), TK_0.getLine());
                    	 		hashValueReturnNode.getChildren().add(TK_0Leaf);
                    	 	}
                    	    // Create a CST Node
                    		if(list_hashValuePartGen_1 != null) {
                    	        for(Iterator it = list_hashValuePartGen_1.iterator(); it.hasNext(); )  { 
                    	            Gra2MoLParser.hashValuePart_return r = (Gra2MoLParser.hashValuePart_return) it.next(); 
                    	            if(r != null && r.returnNode != null) {
                    	            	r.returnNode.setKind("hashValuePart");
                    	            	hashValueReturnNode.getChildren().add(r.returnNode);
                    	            } 
                    	        }
                    	    }
                    		// Returns the Node with CST Leaves/Nodes
                    		retval.returnNode = hashValueReturnNode;
                    	

                    }
                    break;
                case 2 :
                    // /Users/jlcanovas/Desktop/eclipse-helios/workspace/Grammar2Model/../Grammar2Model.Gra2MoL/bootstrap/files/gen/Gra2MoL.g:183:5: TK_0= 'default' TK_1= '->' hashValuePartGen+= hashValuePart
                    {
                    TK_0=(Token)match(input,33,FOLLOW_33_in_hashValue200); 
                    TK_1=(Token)match(input,32,FOLLOW_32_in_hashValue205); 
                    pushFollow(FOLLOW_hashValuePart_in_hashValue210);
                    hashValuePartGen=hashValuePart();

                    state._fsp--;

                    if (list_hashValuePartGen==null) list_hashValuePartGen=new ArrayList();
                    list_hashValuePartGen.add(hashValuePartGen);

